--- a/shelter/pages/main/index.html
+++ b/shelter/pages/main/index.html
@@ -34,6 +34,28 @@
     </div>
   </header>
 
+  <main class="main">
+    <section class="not-only">
+      <div class="wrapper not-only__wrapper">
+        <div class="not-only__content">
+          <div class="not-only__inner">
+            <h2 class="not-only__title">
+              Not only people need a house
+            </h2>
+            <p class="not-only__text">
+              We offer to give a chance to a little and nice puppy with an extremely wide and open heart. He or she will
+              love you more than anybody else in the world, you will see!
+            </p>
+            <div class="not-only__button">
+              <a class="not-only__link" href="#">Make a friend</a>
+            </div>
+          </div>
+          <img class="not-only__img" src="./../../assets/images/start-screen-puppy.png" alt="Start-Puppy">
+        </div>
+      </div>
+    </section>
+  </main>
+
 </body>
 
 </html>
