--- a/shelter/pages/main/index.html
+++ b/shelter/pages/main/index.html
@@ -76,6 +76,53 @@
         </div>
       </div>
     </section>
+    <section class="help">
+      <div class="wrapper help__wrapper">
+        <div class="help__content">
+          <h3 class="help__title">
+            How you can help our shelter
+          </h3>
+          <div class="help__cards">
+            <div class="help__card">
+              <img class="help__img" src="./../../assets/icons/help/food.svg" alt="Pet food">
+              <h4 class="help__name">Pet food</h4>
+            </div>
+            <div class="help__card">
+              <img class="help__img" src="./../../assets/icons/help/transportation.svg" alt="Transportation">
+              <h4 class="help__name">Transportation</h4>
+            </div>
+            <div class="help__card">
+              <img class="help__img" src="./../../assets/icons/help/toys.svg" alt="Toys">
+              <h4 class="help__name">Toys</h4>
+            </div>
+            <div class="help__card">
+              <img class="help__img" src="./../../assets/icons/help/bowls.svg" alt="Bowls and cups">
+              <h4 class="help__name">Bowls and cups</h4>
+            </div>
+            <div class="help__card">
+              <img class="help__img" src="./../../assets/icons/help/shampoos.svg" alt="Shampoos">
+              <h4 class="help__name">Shampoos</h4>
+            </div>
+            <div class="help__card">
+              <img class="help__img" src="./../../assets/icons/help/vitamins.svg" alt="Vitamins">
+              <h4 class="help__name">Vitamins</h4>
+            </div>
+            <div class="help__card">
+              <img class="help__img" src="./../../assets/icons/help/medicines.svg" alt="Medicines">
+              <h4 class="help__name">Medicines</h4>
+            </div>
+            <div class="help__card">
+              <img class="help__img" src="./../../assets/icons/help/collars.svg" alt="Collars / leashes">
+              <h4 class="help__name">Collars / leashes</h4>
+            </div>
+            <div class="help__card">
+              <img class="help__img" src="./../../assets/icons/help/sleeping-area.svg" alt="Sleeping areas">
+              <h4 class="help__name">Sleeping areas</h4>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
   </main>
 
 </body>
