feat: add friends block

--- a/shelter/pages/main/index.html
+++ b/shelter/pages/main/index.html
@@ -76,6 +76,38 @@
         </div>
       </div>
     </section>
+    <section class="friends">
+      <div class="wrapper friends__wrapper">
+        <div class="friends__content">
+          <h3 class="friends__title">
+            Our friends who<br>are looking for a house
+          </h3>
+          <div class="friends__inner">
+            <button class="friends__arrow friends__arrow-prev"></button>
+            <div class="friends__cards">
+              <div class="card">
+                <img class="card__img" src="./../../assets/images/our-friends/katrine.png" alt="Katrine">
+                <h4 class="card__name">Katrine</h4>
+                <button class="card__button">Learn more</button>
+              </div>
+              <div class="card">
+                <img class="card__img" src="./../../assets/images/our-friends/jennifer.png" alt="Jennifer">
+                <h4 class="card__name">Jennifer</h4>
+                <button class="card__button">Learn more</button>
+              </div>
+              <div class="card">
+                <img class="card__img" src="./../../assets/images/our-friends/woody.png" alt="Woody">
+                <h4 class="card__name">Woody</h4>
+                <button class="card__button">Learn more</button>
+              </div>
+            </div>
+            <button class="friends__arrow friends__arrow-next"></button>
+          </div>
+          <a class="friends__btn" href="#">Get to know the rest</a>
+        </div>
+      </div>
+      </div>
+    </section>
     <section class="help">
       <div class="wrapper help__wrapper">
         <div class="help__content">
