--- a/shelter/pages/main/index.html
+++ b/shelter/pages/main/index.html
@@ -155,6 +155,27 @@
         </div>
       </div>
     </section>
+    <section class="donation">
+      <div class="wrapper donation__wrapper">
+        <div class="donation__content">
+          <img class="donation__img" src="./../../assets/images/donation-dog.png" alt="donation-dog">
+          <div class="donation__inner">
+            <h3 class="donation__title">You can also make a donation</h3>
+            <p class="donation__name-bank">Name of the bank / Type of bank account</p>
+            <button class="donation__number">
+              <h4 class="donation__number-name">
+                8380 2880 8028 8791 7435
+              </h4>
+            </button>
+            <p class="donation__legal-info">
+              Legal information and lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas a ipsum at libero
+              sagittis dignissim sed ac diam. Praesent ultrices maximus tortor et vulputate. Interdum et malesuada fames
+              ac ante ipsum primis in faucibus.
+            </p>
+          </div>
+        </div>
+      </div>
+    </section>
   </main>
 
 </body>
