feat: add anchor links

--- a/shelter/pages/main/index.html
+++ b/shelter/pages/main/index.html
@@ -24,10 +24,10 @@
             <a class="navigation__link" href="#">Our pets</a>
           </li>
           <li class="navigation__item">
-            <a class="navigation__link" href="#">Help the shelter</a>
+            <a class="navigation__link" href="#help-the-shelter">Help the shelter</a>
           </li>
           <li class="navigation__item">
-            <a class="navigation__link" href="#">Contacts</a>
+            <a class="navigation__link" href="#contacts">Contacts</a>
           </li>
         </ul>
       </nav>
@@ -155,7 +155,7 @@
         </div>
       </div>
     </section>
-    <section class="donation">
+    <section class="donation" id="help-the-shelter">
       <div class="wrapper donation__wrapper">
         <div class="donation__content">
           <img class="donation__img" src="./../../assets/images/donation-dog.png" alt="donation-dog">
@@ -178,7 +178,7 @@
     </section>
   </main>
 
-  <footer class="footer">
+  <footer class="footer" id="contacts">
     <div class="wrapper footer__wrapper">
       <div class="footer__content">
         <div class="footer__questions">
