feat: add anchor links for button

--- a/shelter/pages/main/index.html
+++ b/shelter/pages/main/index.html
@@ -47,7 +47,7 @@
               love you more than anybody else in the world, you will see!
             </p>
             <div class="not-only__button">
-              <a class="not-only__link" href="#">Make a friend</a>
+              <a class="not-only__link" href="#friends">Make a friend</a>
             </div>
           </div>
           <img class="not-only__img" src="./../../assets/images/start-screen-puppy.png" alt="Start-Puppy">
@@ -76,7 +76,7 @@
         </div>
       </div>
     </section>
-    <section class="friends">
+    <section class="friends" id="friends">
       <div class="wrapper friends__wrapper">
         <div class="friends__content">
           <h3 class="friends__title">
