feat: add basic layout for pets page

--- a/shelter/pages/pets/index.html
+++ b/shelter/pages/pets/index.html
@@ -9,7 +9,36 @@
 </head>
 
 <body>
-
+  <footer class="footer" id="contacts">
+    <div class="wrapper footer__wrapper">
+      <div class="footer__content">
+        <div class="footer__questions">
+          <h3 class="footer__title">For questions and suggestions</h3>
+          <h4 class="footer__name">
+            <a class="footer__link footer__link-email" href="mailto:email@shelter.com">email@shelter.com</a>
+          </h4>
+          <h4 class="footer__name">
+            <a class="footer__link footer__link-telephone" href="tel:+136745677554">+13 674 567 75 54</a>
+          </h4>
+        </div>
+        <div class="footer__visit">
+          <h3 class="footer__title">We are waiting for your visit</h3>
+          <h4 class="footer__name">
+            <a class="footer__link footer__link-location footer__link-boston"
+              href="https://maps.app.goo.gl/fiy7sxtBByHWdpdm7" target="_blank">1 Central
+              Street, Boston
+              (entrance from the store)</a>
+          </h4>
+          <h4 class="footer__name">
+            <a class="footer__link footer__link-location footer__link-london"
+              href="https://maps.app.goo.gl/qqxMxG5MuzBbbcR48" target="_blank">18 South
+              Park, London</a>
+          </h4>
+        </div>
+        <img class="footer__img" src="./../../assets/images/footer-puppy.png" alt="footer-puppy">
+      </div>
+    </div>
+  </footer>
 </body>
 
 </html>
