--- a/shelter/pages/pets/index.html
+++ b/shelter/pages/pets/index.html
@@ -9,6 +9,31 @@
 </head>
 
 <body>
+  <header class="header">
+    <div class="wrapper header__wrapper">
+      <div class="header__logo">
+        <h1 class="logo">Cozy House</h1>
+        <p class="logo__subtitle">Shelter for pets in Boston</p>
+      </div>
+      <nav class="header__navigation">
+        <ul class="navigation">
+          <li class="navigation__item">
+            <a class="navigation__link" href="#">About the shelter</a>
+          </li>
+          <li class="navigation__item -active">
+            <a class="navigation__link" href="#">Our pets</a>
+          </li>
+          <li class="navigation__item">
+            <a class="navigation__link" href="#help-the-shelter">Help the shelter</a>
+          </li>
+          <li class="navigation__item">
+            <a class="navigation__link" href="#contacts">Contacts</a>
+          </li>
+        </ul>
+      </nav>
+    </div>
+  </header>
+
   <footer class="footer" id="contacts">
     <div class="wrapper footer__wrapper">
       <div class="footer__content">
