feat: add friends block

--- a/shelter/pages/pets/index.html
+++ b/shelter/pages/pets/index.html
@@ -34,6 +34,65 @@
     </div>
   </header>
 
+  <main class="main">
+    <section class="friends">
+      <div class="wrapper friends__wrapper">
+        <div class="friends__content">
+          <h3 class="friends__title">Our friends who<br>are looking for a house</h3>
+          <div class="friends__cards">
+            <div class="card">
+              <img class="card__img" src="./../../assets/images/our-friends/katrine.png" alt="Katrine">
+              <h4 class="card__name">Katrine</h4>
+              <button class="card__button">Learn more</button>
+            </div>
+            <div class="card">
+              <img class="card__img" src="./../../assets/images/our-friends/jennifer.png" alt="Jennifer">
+              <h4 class="card__name">Jennifer</h4>
+              <button class="card__button">Learn more</button>
+            </div>
+            <div class="card">
+              <img class="card__img" src="./../../assets/images/our-friends/woody.png" alt="Woody">
+              <h4 class="card__name">Woody</h4>
+              <button class="card__button">Learn more</button>
+            </div>
+            <div class="card">
+              <img class="card__img" src="./../../assets/images/our-friends/sophia.png" alt="Sophia">
+              <h4 class="card__name">Sophia</h4>
+              <button class="card__button">Learn more</button>
+            </div>
+            <div class="card">
+              <img class="card__img" src="./../../assets/images/our-friends/timmy.png" alt="Timmy">
+              <h4 class="card__name">Timmy</h4>
+              <button class="card__button">Learn more</button>
+            </div>
+            <div class="card">
+              <img class="card__img" src="./../../assets/images/our-friends/charly.png" alt="Charly">
+              <h4 class="card__name">Charly</h4>
+              <button class="card__button">Learn more</button>
+            </div>
+            <div class="card">
+              <img class="card__img" src="./../../assets/images/our-friends/scarlet.png" alt="Scarlett">
+              <h4 class="card__name">Scarlett</h4>
+              <button class="card__button">Learn more</button>
+            </div>
+            <div class="card">
+              <img class="card__img" src="./../../assets/images/our-friends/freddie.png" alt="Freddie">
+              <h4 class="card__name">Freddie</h4>
+              <button class="card__button">Learn more</button>
+            </div>
+          </div>
+          <div class="friends__pagination">
+            <button class="pagination__button pagination__button-inactive">&lt;&lt;</button>
+            <button class="pagination__button pagination__button-inactive">&lt;</button>
+            <button class="pagination__button pagination__button-active"> 1 </button>
+            <button class="pagination__button">&gt;</button>
+            <button class="pagination__button">&gt;&gt;</button>
+          </div>
+        </div>
+      </div>
+    </section>
+  </main>
+
   <footer class="footer" id="contacts">
     <div class="wrapper footer__wrapper">
       <div class="footer__content">
