feat: set up the connection of two pages through links

--- a/shelter/pages/main/index.html
+++ b/shelter/pages/main/index.html
@@ -21,7 +21,7 @@
             <a class="navigation__link" href="#">About the shelter</a>
           </li>
           <li class="navigation__item">
-            <a class="navigation__link" href="#">Our pets</a>
+            <a class="navigation__link" href="./../pets/index.html">Our pets</a>
           </li>
           <li class="navigation__item">
             <a class="navigation__link" href="#help-the-shelter">Help the shelter</a>
