--- a/shelter/pages/pets/index.html
+++ b/shelter/pages/pets/index.html
@@ -12,19 +12,21 @@
   <header class="header">
     <div class="wrapper header__wrapper">
       <div class="header__logo">
-        <h1 class="logo">Cozy House</h1>
-        <p class="logo__subtitle">Shelter for pets in Boston</p>
+        <a class="header__logo-link" href="./../main/index.html">
+          <h1 class="logo"> Cozy House</h1>
+          <p class="logo__subtitle">Shelter for pets in Boston</p>
+        </a>
       </div>
       <nav class="header__navigation">
         <ul class="navigation">
           <li class="navigation__item">
-            <a class="navigation__link" href="#">About the shelter</a>
+            <a class="navigation__link" href="./../main/index.html">About the shelter</a>
           </li>
           <li class="navigation__item -active">
             <a class="navigation__link" href="#">Our pets</a>
           </li>
           <li class="navigation__item">
-            <a class="navigation__link" href="#help-the-shelter">Help the shelter</a>
+            <a class="navigation__link" href="./../main/index.html#help-the-shelter">Help the shelter</a>
           </li>
           <li class="navigation__item">
             <a class="navigation__link" href="#contacts">Contacts</a>
