--- a/shelter/pages/main/index.html
+++ b/shelter/pages/main/index.html
@@ -106,7 +106,6 @@
           <a class="friends__btn" href="#">Get to know the rest</a>
         </div>
       </div>
-      </div>
     </section>
     <section class="help">
       <div class="wrapper help__wrapper">
@@ -162,11 +161,11 @@
           <div class="donation__inner">
             <h3 class="donation__title">You can also make a donation</h3>
             <p class="donation__name-bank">Name of the bank / Type of bank account</p>
-            <button class="donation__number">
+            <a class="donation__number">
               <h4 class="donation__number-name">
                 8380 2880 8028 8791 7435
               </h4>
-            </button>
+            </a>
             <p class="donation__legal-info">
               Legal information and lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas a ipsum at libero
               sagittis dignissim sed ac diam. Praesent ultrices maximus tortor et vulputate. Interdum et malesuada fames
