--- a/shelter/pages/pets/index.html
+++ b/shelter/pages/pets/index.html
@@ -5,6 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="./scss/style.css">
+  <link rel="icon" href="./../../assets/icons/favicon-pets.ico" type="image/x-icon">
   <title>Our pets</title>
 </head>
 
