--- a/shelter/pages/main/index.html
+++ b/shelter/pages/main/index.html
@@ -13,8 +13,10 @@
   <header class="header">
     <div class="wrapper header__wrapper">
       <div class="header__logo">
-        <h1 class="logo">Cozy House</h1>
-        <p class="logo__subtitle">Shelter for pets in Boston</p>
+        <a class="header__logo-link">
+          <h1 class="logo"> Cozy House</h1>
+          <p class="logo__subtitle">Shelter for pets in Boston</p>
+        </a>
       </div>
       <nav class="header__navigation">
         <ul class="navigation">
@@ -104,11 +106,11 @@
             </div>
             <button class="friends__arrow friends__arrow-next"></button>
           </div>
-          <a class="friends__btn" href="#">Get to know the rest</a>
+          <a class="friends__btn" href="./../pets/index.html">Get to know the rest</a>
         </div>
       </div>
     </section>
-    <section class="help">
+    <section class="help" id="help-the-shelter">
       <div class="wrapper help__wrapper">
         <div class="help__content">
           <h3 class="help__title">
@@ -155,7 +157,7 @@
         </div>
       </div>
     </section>
-    <section class="donation" id="help-the-shelter">
+    <section class="donation">
       <div class="wrapper donation__wrapper">
         <div class="donation__content">
           <img class="donation__img" src="./../../assets/images/donation-dog.png" alt="donation-dog">
