--- a/shelter/pages/main/index.html
+++ b/shelter/pages/main/index.html
@@ -34,6 +34,11 @@
           </li>
         </ul>
       </nav>
+      <div class="header__burger">
+        <span class="header__burger-line"></span>
+        <span class="header__burger-line"></span>
+        <span class="header__burger-line"></span>
+      </div>
     </div>
   </header>
 
