--- a/audio-player/index.html
+++ b/audio-player/index.html
@@ -23,7 +23,14 @@
             <button class="button music"></button>
             <button class="button next"></button>
           </div>
+          <div class="player__time-bar">
+            <div class="player__start-music time">0:00</div>
+            <div class="player__progress-bar">
+              <div class="player__progress-bar-active"></div>
+            </div>
+            <div class="player__end-time-music time">2:51</div>
 
+          </div>
           <div class="buttons">
             <div class="btn btn-modal">Lyrics</div>
             <a class="btn btn-download" href="">Download</a>
